[package]
name = "xbytes"
version = "0.1.0"
authors = ["Miraculous Owonubi <omiraculous@gmail.com>"]
edition = "2021"
# rust-edition = "1.56"
description = "Primitives for converting between byte sizes and human readable sizes"
repository = "https://github.com/miraclx/xbytes-rs"
license = "Apache-2.0"
# keywords = []
# categories = []
publish = false

[dependencies]
bitflags = "1.2.1"
fraction = { version = "0.8.0", optional = true }

[features]
default = ["u128", "lossless", "no-panic"]
bits = []
u128 = []
lossless = ["fraction"]
no-panic = ["lossless"]
case-insensitive = []
