[package]
name = "xbytes"
version = "0.1.0"
authors = ["Miraclx <omiraculous@gmail.com>"]
edition = "2018"
description = "convert byte sizes to human readable sizes"
license = "Apache-2.0"

[dependencies]
bitflags = "1.2.1"
fraction = { version = "0.8.0", optional = true }

[features]
default = ["u128", "lossless", "no-panic"]
bits = []
u128 = []
lossless = ["fraction"]
no-panic = ["lossless"]
case-insensitive = []
